Revert "Feat/n8n flow"
